# musicserver1

./: .gitignore  Cargo.toml  LICENSE.md  README.md  crate_notes.txt  new_database_schema.txt  replayer_variations.db  taggable_variations.db  usb.ids.txt  usb_supplement.ids.txt  waveforms.yml
musisync/: FONTLOG.txt  LICENSE_OFL.txt  MusiSync-README.htm  MusiSync_character_map.htm  OFL-FAQ.txt  README_MusiQwik_MusiSync.txt  SOURCE.txt
papers/: notes.txt
src/: adsr.rs  ai_variation.rs  analyzer.rs  chords.rs  database.rs  lib.rs  main.rs  melody_renderer.rs  midi.rs  midi_input.rs  notes.rs  runtime.rs  subsequence_finder.rs  synth_output.rs  synth_sounds.rs  usb_midi.rs  vec_tracker.rs
