[package]
name = "musicserver1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare_metal_modulo = "0.11.3"
ordered-float = "3.0.0"
histogram_macros = {git = "https://github.com/gjf2a/histogram_macros"}
rand = "0.8.5"
enum-iterator = "1.2.0"
midir = "0.8.0"
fundsp = "0.9.0"
cpal = "0.14.0"
anyhow = "1.0.65"
midi-msg = "0.4.0"
crossbeam-queue = "0.3"
float-cmp = "0.9.0"
read_input = "0.8.6"
eframe = "0.19.0"