[package]
name = "musicserver1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midi_fundsp = {git = "https://github.com/gjf2a/midi_fundsp"}
distribution_select = {git = "https://github.com/gjf2a/distribution_select"}
histogram_macros = {git = "https://github.com/gjf2a/histogram_macros"}
#bare_metal_modulo = "1"
bare_metal_modulo = {git = "https://github.com/gjf2a/bare_metal_modulo"}
ordered-float = "3"
rand = "0.8"
enum-iterator = "1"
midir = "0.8"
fundsp = "0.10"
cpal = "0.14"
anyhow = "1"
midi-msg = "0.4"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
float-cmp = "0.9"
read_input = "0.8"
eframe = "0.19"
trait-set = "0.3"
vecmap-rs = "0.1"
typenum = "1.15"
sqlite = "0.30" 
chrono = "0.4"
num = "0.4"