[package]
name = "musicserver1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
distribution_select = {git = "https://github.com/gjf2a/distribution_select"}
histogram_macros = {git = "https://github.com/gjf2a/histogram_macros"}
midi_fundsp = "0.3"
bare_metal_modulo = "1"
ordered-float = "4"
rand = "0.8"
enum-iterator = "1"
midir = "0.9.1"
anyhow = "1"
midi-msg = "0.6.1"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
float-cmp = "0.9"
read_input = "0.8"
eframe = "0.26"
trait-set = "0.3"
vecmap-rs = "0.2"
typenum = "1.15"
sqlite = "0.34" 
chrono = "0.4"
num = "0.4"
lazy_static = "1.4.0"